--- a/src/AdvancedBot.Core/AdvancedBot.Core.csproj
+++ b/src/AdvancedBot.Core/AdvancedBot.Core.csproj
@@ -8,6 +8,6 @@
     <PackageReference Include="Discord.Net" Version="2.1.1"/>
     <PackageReference Include="LiteDB" Version="5.0.7"/>
     <PackageReference Include="Humanizer" Version="2.8.26"/>
-    <PackageReference Include="CoreHtmlToImage" Version="1.0.6"/>
+    <PackageReference Include="PuppeteerSharp" Version="2.0.3"/>
   </ItemGroup>
 </Project>
