--- a/src/AdvancedBot.Console/AdvancedBot.Console.csproj
+++ b/src/AdvancedBot.Console/AdvancedBot.Console.csproj
@@ -6,4 +6,7 @@
   <ItemGroup>
     <ProjectReference Include="..\AdvancedBot.Core\AdvancedBot.Core.csproj"/>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="5.0.0"/>
+  </ItemGroup>
 </Project>
