--- a/src/AdvancedBot.Console/AdvancedBot.Console.csproj
+++ b/src/AdvancedBot.Console/AdvancedBot.Console.csproj
@@ -7,6 +7,6 @@
     <ProjectReference Include="..\AdvancedBot.Core\AdvancedBot.Core.csproj"/>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="5.0.0"/>
+    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="6.0.0-preview.3.21201.4"/>
   </ItemGroup>
 </Project>
